# entropix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build_and_test.yml
src/: block_entropy_scanner.cpp  block_entropy_scanner.hpp  entropy_calculator.cpp  entropy_calculator.hpp  file_reader.cpp  file_reader.hpp  utils.cpp  utils.hpp
test/: test_block_entropy_scanner.cpp  test_entropy_calculator.cpp  test_file_reader.cpp  test_utils.cpp
test/data/: small.txt
test/data/nonrec_dir/: a.txt
test/data/rec_dir/: root.txt
test/data/rec_dir/subdir/: nested.txt
test/data/rec_dir/subdir/verynested/: myfile.txt
